tests/should-fail/type-redeclaration.ls
f :: Bool -> Bool;
f :: Int -> Int;
f x = x;
